# pokemon-public-api-planetscale-netlify

./: .gitignore  Brewfile.netlify  Cargo.toml  Makefile  create-tables.sql  input.sql  netlify.toml  pokemon.csv  rust-toolchain.toml
crates/pokemon-api/: Cargo.toml
crates/pokemon-api/src/: apigw-request.json  db.rs  empty-pokemon-request.json  main.rs
crates/upload-pokemon-data/: Cargo.toml  create-tables.sql
crates/upload-pokemon-data/src/: db.rs  lib.rs  main.rs  pokemon_csv.rs
src/: csv_utils.rs  db.rs  main.rs  models.rs  schema.rs  upload-pokemon-data.rs
