[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.5"
lambda_runtime = "0.4.1"
sqlx = { version = "0.5.7", features = ["mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = "1.12.0"
serde_json = "1.0.68"
once_cell = "1.8.0"
