[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = [
    "apigw_rest",
] }
tokio = { version = "1.29.1", features = ["macros"] }
