[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = [
    "apigw_rest",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.29.1", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
upload-pokemon-data = { path = "../upload-pokemon-data" }
