[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
color-eyre = "0.5.11"
csv = "1.1.6"
futures = "0.3.17"
indicatif = "0.16.2"
ksuid = "0.2.0"
serde = { version = "1.0.129", features = ["derive"] }
sqlx = { version = "0.5.7", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["macros"] }
