[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
csv = "1.2.2"
futures = "0.3.28"
indicatif = "0.17.6"
ksuid = "0.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
